@@ -15,6 +15,7 @@ Verilator 5.025 devel
 
 * Support __en/__out signals on top level inout ports (#4812) (#4856). [Paul Wright]
 * Add CITATION.cff (#5057) (#5058). [Gijs Burghoorn]
+* Fix missing parameters with comma to be errors (#4979) (#5012). [Paul Swirhun]
 * Fix consecutive zero-delays (#5038). [Krzysztof Bieganski, Antmicro Ltd.]
 * Fix `$system` with string argument (#5042).
 * Fix width extension on delays (#5043).
